--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
   },
   "devDependencies": {
     "gulp": "^3.8.7",
-    "gulp-bump": "^0.1.11",
     "gulp-concat": "^2.3.4",
-    "gulp-sass": "^2.0.1",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-webserver": "^0.7.1"
   },
   "scripts": {
     "prestart": "npm install",
-    "start": "gulp",
-    "ghpages": "git subtree push --prefix demo origin gh-pages"
+    "start": "gulp"
   },
   "repository": {
     "type": "git",
